k8s-docs/traefik/traefik-service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ui
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: tr-srv-port
    port: 8081
    targetPort: 8081
