k8s-docs/traefik/traefik-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: kube-system
  #annotations:
  #  kubernetes.io/ingress.class: "traefik"
  annotations:
    traefik.backend.loadbalancer.method: drr
    #traefik.frontend.rule.type: pathprefixstrip
spec:
  rules:
  - host: traefik.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-ui
          servicePort: tr-srv-port
  - host: ui.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 9090
